add responses with status 500

--- a/src/docs/carts/carts.yaml
+++ b/src/docs/carts/carts.yaml
@@ -16,13 +16,16 @@ paths:
                   $ref: "#components/schemas/carts"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/getCartError"
 
     #addCart
     post:
       summary: add cart
       tags:
         - carts
-
       responses:
         200:
           description: the cart were successfully received
@@ -34,6 +37,10 @@ paths:
                   $ref: "#components/schemas/addCartSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/addCartError"
 
   /api/carts/{cid}:
     #get cart by ID
@@ -57,6 +64,10 @@ paths:
                 $ref: "#components/schemas/carts"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/getCartError"
 
     #delete cart
     delete:
@@ -80,6 +91,10 @@ paths:
                 $ref: "#components/schemas/deleteCartSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/deleteCartError"
 
   /api/carts/{cid}/products/{pid}:
     #agregar productos al carrito
@@ -109,6 +124,10 @@ paths:
                 $ref: "#components/schemas/addProductToCartSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/addProductCartError"
 
     #eliminar productos del carrito
     delete:
@@ -137,6 +156,10 @@ paths:
                 $ref: "#components/schemas/deleteProductFromCartSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/deleteProductCartError"
 
     #actualizar productos del carrito
     put:
@@ -173,11 +196,40 @@ paths:
                 $ref: "#components/schemas/updateCartSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/updateProductCartError"
 
   /api/carts/{cid}/purchase:
+    post:
+      summary: finalize purchase
+      tags:
+        - carts
+      parameters:
+        - name: cid
+          in: path
+          required: true
+          description: ID of the cart that requires to be purchased
+          schema:
+            $type: string
+      responses:
+        200:
+          description: purchase completed successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/purchaseSuccess"
+        500:
+          description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/purchaseError"
 
 components:
   schemas:
+    #cart schema
     carts:
       type: object
       properties:
@@ -195,6 +247,7 @@ components:
         products: []
         __v: 0
 
+    #add cart success
     addCartSuccess:
       type: object
       properties:
@@ -206,6 +259,7 @@ components:
         status: success
         message: cart added successfully
 
+    #update cart success
     updateCartSuccess:
       type: object
       properties:
@@ -217,6 +271,7 @@ components:
         status: success
         message: cart updated successfully
 
+    #delete cart success
     deleteCartSuccess:
       type: object
       properties:
@@ -228,6 +283,7 @@ components:
         status: success
         message: cart removed successfully
 
+    #add product to cart success
     addProductToCartSuccess:
       type: object
       properties:
@@ -239,6 +295,7 @@ components:
         status: success
         message: sky skirt added to cart 65668aac0971f5b665ba8128 successfully
 
+    #delete product from cart success
     deleteProductFromCartSuccess:
       type: object
       properties:
@@ -249,6 +306,108 @@ components:
       example:
         status: success
         message: sky skirt removed to cart 65668aac0971f5b665ba8128 successfully
+
+    #purchase success
+    purchaseSuccess:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+        ticket: object
+      example:
+        status: success
+        message: purchase completed successfully
+        ticket:
+          amount: 111
+          code: dc7304fa-5085-4e6b-9b62-7754798d54f8
+          purchaser: valeria.casatti@gmail.com
+          purchase_datetime: Thu Nov 30 2023
+
+    #get cart error
+    getCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error getting the carts
+
+    #add cart error
+    addCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error adding the cart
+
+    #delete cart error
+    deleteCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error deleting the cart
+
+    #add product to cart error
+    addProductCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error adding product to the cart
+
+    #delete product from cart error
+    deleteProductCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error removing product from cart
+
+    #update product from cart error
+    updateProductCartError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error updating cart product
+
+    #purchase error
+    purchaseError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error finalizing the purchase
 
   requestBodies:
     UpdateProductCart:
