--- a/src/docs/products/products.yaml
+++ b/src/docs/products/products.yaml
@@ -16,6 +16,11 @@ paths: #endpoints
                   $ref: "#components/schemas/products"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/getError"
+
     #add product
     post:
       summary: add product
@@ -36,6 +41,10 @@ paths: #endpoints
                 $ref: "#components/schemas/addSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/addError"
 
   #ID
   /api/products/{pid}:
@@ -60,6 +69,10 @@ paths: #endpoints
                 $ref: "#components/schemas/products"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/getError"
 
     #update product
     put:
@@ -92,6 +105,10 @@ paths: #endpoints
                 $ref: "#components/schemas/updateSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/updateError"
 
     #delete product
     delete:
@@ -115,9 +132,14 @@ paths: #endpoints
                 $ref: "#components/schemas/deleteSuccess"
         500:
           description: problem on the server
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/deleteError"
 
 components: #que representa ese modulo*?
   schemas: #estructura del modulo que se le devuelve al cliente
+    #schema de producto
     products:
       type: object
       properties:
@@ -168,6 +190,7 @@ components: #que representa ese modulo*?
         __v: 0
         owner: "6564ea0d913aa2774e9e2ea6"
 
+    #update product success
     updateSuccess:
       type: object
       properties:
@@ -192,6 +215,7 @@ components: #que representa ese modulo*?
           __v: 0
           owner: "6564ea0d913aa2774e9e2ea6"
 
+    #add product success
     addSuccess:
       type: object
       properties:
@@ -203,6 +227,7 @@ components: #que representa ese modulo*?
         status: success
         message: sky skirt added successfully!
 
+    #delete product success
     deleteSuccess:
       type: object
       properties:
@@ -213,6 +238,54 @@ components: #que representa ese modulo*?
       example:
         status: success
         message: sky skirt removed successfully!
+
+    #get products error
+    getError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error getting the products
+
+    #add products error
+    addError:
+      type: object
+      properties:
+        status:
+          type: string
+        message:
+          type: string
+      example:
+        status: error
+        message: error adding the product
+
+    #update product error
+    updateError:
+      type: object
+      properties:
+        status:
+          type: string
+          message:
+            type: string
+            example:
+              status: error
+              message: error updating the product
+
+    #delete product error
+    deleteError:
+      type: object
+      properties:
+        status:
+          type: string
+          message:
+            type: string
+            example:
+              status: error
+              message: error deleting the product
 
   requestBodies:
     addUpdateProduct:
